<resources>
    <string name="app_name">G148 Argentina</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string formatted="false" name="g148_text"><![CDATA[<p><strong>Qu&eacute; es?</strong><br /><br /><strong>Visi&oacute;n:</strong> Reavivar esta generaci&oacute;n a trav&eacute;s del relacionamiento &iacute;ntimo con Cristo y Su&nbsp;palabra, resultando en una comunidad viva y relevante en la misi&oacute;n de se&ntilde;alizar la&nbsp;llegada del reino de Dios con creatividad y diversidad de ideales.<br /><strong>Nombre:</strong> Basado en el texto de Romanos 14:8 "Porque, si vivimos, para el Se&ntilde;or&nbsp;vivimos; y si morimos, para el Se&ntilde;or morimos. As&iacute; pues, sea que vivamos o que&nbsp;muramos, del Se&ntilde;or somos". El Proyecto pretende establecer una identidad cristiana&nbsp;real y significativa en la vida de los j&oacute;venes.</p>
<p><br /><strong>Objetivos:</strong><br />1) Inspirar j&oacute;venes a vivir para la gloria de Dios atrav&eacute;s de un relacionamiento &iacute;ntimo&nbsp;con Cristo.<br />2) Cambiar a un cristianismo estrictamente b&iacute;blico y pr&aacute;ctico.<br />3) Promover relaciones concretas en redes de amistad.<br />4) Desenvolver voluntariado y servicio social junto a la comunidad.<br />5) Motivar hacia nuevos m&eacute;todos creativos de evangelizaci&oacute;n.<br />6) Capacitar ydesarrollar la diversidadde dones, y crear oportunidades para su&nbsp;utilizaci&oacute;n.<br />7) Difundir el mensaje contextualizado de la salvaci&oacute;n en Cristo Jes&uacute;s.<br />8) Crear un ambiente propicio para atraer a los amigos no cristianos.<br />9) Promover el reavivamiento y reforma de los j&oacute;venes adventistas.<br />10) Envuelva un estilo de vida joven y guiada por principios b&iacute;blicos.</p>
<p><br /><strong>Diccionario de Generaci&oacute;n 148</strong></p>
<p><br />1. Generaci&oacute;n 148: Movimiento de j&oacute;venes adventistas que tienen como principio de&nbsp;acci&oacute;n y vida Romanos 14:8. Son j&oacute;venes no dispuestos al pecado y dispuestos a&nbsp;buscar una nueva experiencia con Dios, con el pr&oacute;jimo y con la sociedad.<br />2. Base: j&oacute;venes de Es el nombre dado al local de reuniones de los miembros de&nbsp;Generaci&oacute;n 148. Es en la BASE donde todas las acciones son coordinadas. La&nbsp;direcci&oacute;n debe ser difundida a los la iglesia y a los amigos no bautizados. Ese local&nbsp;debe ser preferencialmente la casa de uno de los participantes, debiendo ser local&nbsp;fijo por al menos 3 meses. No est&aacute; prohibido tener la BASE en la iglesia, sin&nbsp;embargo entendemos que otro local propiciar&aacute; un ambiente m&aacute;s informal.<br />3. Desaf&iacute;o o Acci&oacute;n: Es una acci&oacute;n diferente, inusitada y desafiante que la BASE hace.<br />Esta acci&oacute;n puede ser semanal, quincenal o mensual, conforme decida la BASE.<br />S&oacute;lo resplandeceremos la gloria de Dios cuando extendamos las manos a quienes&nbsp;est&aacute;n en medio de la amargura de la vida.</p>
<p><br /><strong>&iquest;Qu&eacute; hacer?</strong></p>
<p>Es simple: &iquest;qu&eacute; haces cuando te encuentras con tus amigos? &iquest;Conversas, r&iacute;es, lloras,&nbsp;cuentas noticias, reclamas, agradeces, cantas? Entonces! Es simple. Haz eso mismo. El&nbsp;encuentro debe ser algo alegre, motivador, sin un orden preestablecido. Sin embargo,&nbsp;el ENCUENTRO debe tener una parte espiritual interesante e esclarecedora. Como&nbsp;material de apoyo, sugerimos que en el primer a&ntilde;o de funcionamiento, la Generaci&oacute;n&nbsp;148 utilice el material "El Rescate", como gu&iacute;a de temas. Si deseare, el BLOG ofrece&nbsp;opciones de gu&iacute;as de estudios, impr&iacute;malo en el orden que m&aacute;s le interese. Si&eacute;ntase&nbsp;libre de elegir su orden de temas. Los temas pueden ser compartidos semanalmente&nbsp;para que todos tengan forma de dar una mirada en otros materiales para poder&nbsp;contribuir con opiniones. Vale la pena recordar que es INDISPENSABLE que haya no&nbsp;adventistas entre los participantes, y en ese caso, vaya con calma. Los temas deben ser&nbsp;crecientes en su complejidad.</p>]]></string>

    <string name="instagram"><a href="https://www.instagram.com/generacion148arg/">Generación148arg</a></string>
    <string name="facebook"><a href="https://www.facebook.com/Generaci%C3%B3n148-ARG-1331853973593562/">Generación148 ARG</a></string>
    <string formatted="false" name="twitter"><a href="https://twitter.com/generacion148ar">\@Generacion148ar</a></string>
    <string name="youtube"><a href="https://www.youtube.com/channel/UCatVFv1YqhWTx6qXak0slmg?view_as=subscriber">generacion148 Argentina</a></string>

    <string name="espacio_joven">El "Espacio Joven" es un programa de escuela sabática sumamente especial, donde cada base de G148 se reune como una unidad de acción para disfrutar del repaso semanal de la lección. El “Espacio Joven” necesita tener un lugar propio en las instalaciones de la iglesia; un lugar que sea diseñado y decorado por los jóvenes en el cual usen toda su creatividad para hacer de ese espacio un lugar acogedor y acorde a su generación.</string>
    <string name="culto_adoracion">Es el momento en el cual la generación 148 comparte la adoración con los demás miembros de la iglesia. Con la presencia activa de los jóvenes los cultos serán más animados e inspiradores.</string>
    <string name="caleb">La generación 148 es soñadora y se propone metas altas para alcanzar. Cada sábado de tarde es momento de salir a la calle a compartir el amor de Jesús cumpliendo los “Desafíos mensuales” y realizando todo tipo de actividad misionera creativa. A eso le llamamos Misión Caleb-</string>
    <string name="culto_joven">Es el momento de celebración espiritual. El culto Joven es un culto dinámico con cuatro momentos: Alabanza, Oración, Testimonio y Mensaje. Un momento de alabanza que sea para jóvenes (idealmente con músicos en vivo). Un momento de oración dinámico, espiritual y creativo. Un momento de testimonio que sea enriquecido por la "Misión Caleb" de la tarde. Un momento de Mensaje espriritual, cristocéntrico y con temáticas absolutamente dirigidas a los jóvenes. En síntesis un culto corto pero significativo.</string>
    <string name="after">Después del "culto joven" es el momento ideal para tener momentos de sociabilidad. Actividad recreativas tales como: deportes, películas, debates, juegos organizados, son algunas de las actividades que pueden disfrutar todos juntos.</string>

</resources>