<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/page_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ban_espacio"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:text="@string/espacio_joven"
                android:textSize="17sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/page_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ban_culto"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:text="@string/culto_adoracion"
                android:textSize="17sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/page_three"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ban_caleb"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:text="@string/caleb"
                android:textSize="17sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/page_four"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ban_joven"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:text="@string/culto_joven"
                android:textSize="17sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/page_five"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ban_after"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:text="@string/after"
                android:textSize="17sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/page_six"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ban_all"/>

        </LinearLayout>

    </android.support.v4.view.ViewPager>

</LinearLayout>