<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#000000"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@drawable/ic_instagram"/>

        <TextView
            android:id="@+id/instagram_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.75"
            android:gravity="center"
            android:text="@string/instagram"
            android:textColor="#ffffff"
            android:textColorLink="@color/white"
            android:textSize="24sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@drawable/ic_facebook"/>

        <TextView
            android:id="@+id/facebook_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.75"
            android:gravity="center"
            android:text="@string/facebook"
            android:textColor="#ffffff"
            android:textColorLink="@color/white"
            android:textSize="24sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@drawable/ic_youtube"/>

        <TextView
            android:id="@+id/youtube_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.75"
            android:gravity="center"
            android:text="@string/youtube"
            android:textColor="#ffffff"
            android:textColorLink="@color/white"
            android:textSize="24sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@drawable/ic_twitter"/>

        <TextView
            android:id="@+id/twitter_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.75"
            android:gravity="center"
            android:text="@string/twitter"
            android:textColor="#ffffff"
            android:textColorLink="@color/white"
            android:textSize="24sp"
            />

    </LinearLayout>

</LinearLayout>